--- a/biblio.bib
+++ b/biblio.bib
@@ -3,6 +3,159 @@
 
 
 
+@article{whitehand1999urban,
+	Author = {Whitehand, JWR and Morton, NJ and Carr, CMH},
+	Journal = {Environment and Planning B: Planning and Design},
+	Number = {4},
+	Pages = {503--515},
+	Title = {Urban morphogenesis at the microscale: how houses change},
+	Volume = {26},
+	Year = {1999}}
+
+
+@article{dollens2014alan,
+	Author = {Dollens, Dennis},
+	Journal = {Leonardo},
+	Number = {3},
+	Pages = {249--254},
+	Title = {Alan Turing's Drawings, Autopoiesis and Can Buildings Think?},
+	Volume = {47},
+	Year = {2014}}
+
+
+
+
+@article{bitbol2004autopoiesis,
+  title={Autopoiesis with or without cognition: defining life at its edge},
+  author={Bitbol, Michel and Luisi, Pier Luigi},
+  journal={Journal of the Royal Society Interface},
+  volume={1},
+  number={1},
+  pages={99--107},
+  year={2004},
+  publisher={The Royal Society}
+}
+
+
+
+@article{fletcher2014vertex,
+  title={Vertex models of epithelial morphogenesis},
+  author={Fletcher, Alexander G and Osterfield, Miriam and Baker, Ruth E and Shvartsman, Stanislav Y},
+  journal={Biophysical journal},
+  volume={106},
+  number={11},
+  pages={2291--2304},
+  year={2014},
+  publisher={Elsevier}
+}
+
+
+
+@article{bedau2002downward,
+	Author = {Bedau, Mark},
+	Journal = {Principia: an international journal of epistemology},
+	Number = {1},
+	Pages = {5--50},
+	Title = {Downward causation and the autonomy of weak emergence},
+	Volume = {6},
+	Year = {2002}}
+
+@article{livet2010ontology,
+	Author = {Livet, Pierre and Muller, Jean-Pierre and Phan, Denis and Sanders, Lena},
+	Journal = {Journal of Artificial Societies and Social Simulation},
+	Number = {1},
+	Pages = {3},
+	Title = {Ontology, a Mediator for Agent-Based Modeling in Social Science},
+	Volume = {13},
+	Year = {2010}}
+
+
+
+@article{benedek1973instinct,
+  title={The instinct theory in the light of microbiology},
+  author={Benedek, Therese},
+  journal={Annual of Psychoanalysis},
+  volume={1},
+  pages={53--72},
+  year={1973},
+  publisher={Routledge Mental Health, Taylor and Francis Group}
+}
+
+
+
+@phdthesis{ceccarini2001essai,
+  title={Essai de formalisation dynamique de la cath{\'e}drale gothique: morphog{\'e}n{\`e}se et mod{\'e}lisation de la Basilique Saint-Denis: les relations entre th{\'e}ologie, sciences et architecture au XIII{\`e}me si{\`e}cle {\`a} Saint-Denis},
+  author={Ceccarini, Patrice},
+  year={2001},
+  school={Paris, EHESS}
+}
+
+
+
+@article{jun2005formation,
+  title={Formation and structure of ramified charge transportation networks in an electromechanical system},
+  author={Jun, Joseph K and H{\"u}bler, Alfred H},
+  journal={Proceedings of the National Academy of Sciences of the United States of America},
+  volume={102},
+  number={3},
+  pages={536--540},
+  year={2005},
+  publisher={National Acad Sciences}
+}
+
+
+
+
+@article{niizato2010model,
+	Author = {Niizato, Takayuki and Shirakawa, Tomohiro and Gunji, Yukio-Pegio},
+	Journal = {Biosystems},
+	Number = {2},
+	Pages = {108--112},
+	Title = {A model of network formation by Physarum plasmodium: interplay between cell mobility and morphogenesis},
+	Volume = {100},
+	Year = {2010}}
+
+
+
+@article{cerchiari2015strategy,
+  title={A strategy for tissue self-organization that is robust to cellular heterogeneity and plasticity},
+  author={Cerchiari, Alec E and Garbe, James C and Jee, Noel Y and Todhunter, Michael E and Broaders, Kyle E and Peehl, Donna M and Desai, Tejal A and LaBarge, Mark A and Thomson, Matthew and Gartner, Zev J},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={112},
+  number={7},
+  pages={2287--2292},
+  year={2015},
+  publisher={National Acad Sciences}
+}
+
+
+
+@article{heisenberg2013forces,
+  title={Forces in tissue morphogenesis and patterning},
+  author={Heisenberg, Carl-Philipp and Bella{\"\i}che, Yohanns},
+  journal={Cell},
+  volume={153},
+  number={5},
+  pages={948--962},
+  year={2013},
+  publisher={Elsevier}
+}
+
+
+
+@article{yamada2007modeling,
+  title={Modeling tissue morphogenesis and cancer in 3D},
+  author={Yamada, Kenneth M and Cukierman, Edna},
+  journal={Cell},
+  volume={130},
+  number={4},
+  pages={601--610},
+  year={2007},
+  publisher={Elsevier}
+}
+
+
+
 @article{voss2012multi,
 	Author = {Voss-B{\"o}hme, Anja},
 	Journal = {PloS one},
