--- a/review.tex
+++ b/review.tex
@@ -18,7 +18,7 @@
 
 \affil[*]{corresponding.author@email.example}
 
-\affil[+]{these authors contributed equally to this work}
+%\affil[+]{these authors contributed equally to this work}
 
 
 %\date{July 6th, 2016}
@@ -48,7 +48,9 @@ The notion of morphogenesis seems to play an important role in the study of a br
 %%%%%%%%%%%%%%%%%%%%%%%
 \section*{Introduction}
 
-At every historical period, people use the main technological advance as a metaphor to explain other phenomenon in nature. First, nature was mechanical, then electrical, and now, computational. Here we suggest that taking an alternative metaphor might allow us to better study some properties of a system, and study how the concept of morphogenesis that originated in the study of developmental biology, can be used across systems. Morphogenesis is a very powerful metaphor that is distinct from the previous three that have been very popular in history. Unlike the mechanical, electrical or computational explanations of nature, morphogenesis is not a human designed process. Morphogenesis emphasize the role of change and growth, rather than a static state. "... natural history deals with ephemeral and accidental, not eternal nor universal things ..." \cite{thompson1942growth} The goal of this paper is to study 1. the definition of the word morphogenesis in different fields. 2. fields that use similar approaches and concepts that embodies the notion of morphogenesis but does not use the word morphogenesis. 3. if approaches to study morphogenesis can be applied across different fields. A similar effort is described in \cite{bourgine2010morphogenesis}, but it consists more on a collection of viewpoints from subjects that can be related to morphogenesis rather than an epistemological reconstruction of the notion as we attend (intend??) to do. Furthermore, examples are far from exhausted and our review is thus complementary.
+At every historical period, people use the main technological advance as a metaphor to explain other phenomenon in nature. First, nature was mechanical, then electrical, and now, computational. Here we suggest that taking an alternative metaphor might allow us to better study some properties of a system, and study how the concept of morphogenesis that originated in the study of developmental biology, can be used across systems. Morphogenesis is a very powerful metaphor that is distinct from the previous three that have been very popular in history. Unlike the mechanical, electrical or computational explanations of nature, morphogenesis is not a human designed process. Morphogenesis emphasize the role of change and growth, rather than a static state. "... natural history deals with ephemeral and accidental, not eternal nor universal things ..." \cite{thompson1942growth} The goal of this paper is to study 1. the definition of the word morphogenesis in different fields. 2. fields that use similar approaches and concepts that embodies the notion of morphogenesis but does not use the word morphogenesis. 3. if approaches to study morphogenesis can be applied across different fields. A similar effort is described in~\cite{bourgine2010morphogenesis}, but it consists more on a collection of viewpoints from subjects that can be related to morphogenesis rather than an epistemological reconstruction of the notion as we propose to do. Furthermore, examples are far from exhausted and our review is thus complementary.
+
+The rest of this paper is organized as follows : we provide first a compartmentalized review of the notion of morphogenesis across various fields, ranging from biology to social sciences, psychology and territorial sciences. A synthesis is then made and a framework as general as possible proposed. We finally discuss further developments and potential application of this epistemological analysis.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%
@@ -66,7 +68,7 @@ At every historical period, people use the main technological advance as a metap
 %
 %Organoids: we can reproduce a great deal of morphogenesis, but still don't understand everything, Sato&Clevers
 \subsection*{Developmental Biology}
-\subsubsection{Notion of morphogenesis in biology}
+\subsubsection*{Notion of morphogenesis in biology}
 %Some founders of the field: D'Arcy Thompson (On Growth and Form, 1917) Turing (1952)
 %Special issue in Science: http://www.sciencemag.org/site/special/morph/index.xhtml
 % First in depth application of this theory to biology by Gierer&Meinhardt Kybernetik (1972),
@@ -98,12 +100,12 @@ Evolution has also produced reaction-diffusion processes that
 % compare the two biological approach ?
 %   comparative biology ? -> many species studied.
 \subsubsection*{Mechanistic modeling}
-Multi-Scale Modeling in Morphogenesis: A Critical Analysis of the Cellular Potts Model (Voss-Boehme, 2012)
-Modeling tissue morphogenesis and cancer in 3D Yamada (2007)
-Forces in Tissue Morphogenesis and Patterning (Heisenberg, 2012)
+Multi-Scale Modeling in Morphogenesis: A Critical Analysis of the Cellular Potts Model (Voss-Boehme, 2012) \cite{voss2012multi}
+Modeling tissue morphogenesis and cancer in 3D Yamada (2007) \cite{yamada2007modeling}
+Forces in Tissue Morphogenesis and Patterning (Heisenberg, 2012) \cite{heisenberg2013forces}
 A strategy for tissue self-organization that is robust to
-cellular heterogeneity and plasticity (PNAS, 2015)
-Vertex Models of Epithelial Morphogenesis
+cellular heterogeneity and plasticity (PNAS, 2015) \cite{cerchiari2015strategy} ;
+Vertex Models of Epithelial Morphogenesis~\cite{fletcher2014vertex}
 
 Force generation: microtubules, acto-myosin cortex dynamics, motors work by binding to microtubules/actin-filaments and directional 'walking'
 Force transduction: adherens junctions, link neighboring cells
@@ -118,7 +120,7 @@ Notion of model organism, pick three: volvox, Drosophila, tissue culture/3D in v
 %%%%%%%%%%%%%%%%%%%%%%%%
 \paragraph{Extended Phenotype}
 
-The patterns of an ant nest are the result of ``the morphogenesis of an extended phenotype''~\cite{minter2012morphogenesis}. Here boundaries of the system are extended beyond basic units - social morphogenesis ? larger scale organism ? self-organisation with \emph{architecture} and \emph{cognition}. Q : is the ant colony autopoietic ? Rq : the organism is the ant colony itself, see scaling lecture with body mass.
+The patterns of an ant nest are the result of ``the morphogenesis of an extended phenotype''~\cite{minter2012morphogenesis}. Here boundaries of the system are extended beyond basic organisms, as a kind of social morphogenesis. The ant nest can be seen as a larger scale organism ? self-organisation with \emph{architecture} and \emph{cognition}. Q : is the ant colony autopoietic ? Rq : the organism is the ant colony itself, see scaling lecture with body mass.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%
@@ -138,7 +140,7 @@ The patterns of an ant nest are the result of ``the morphogenesis of an extended
 % taken from Emanuele's review
 % link : https://www.dropbox.com/s/agug14i106eig9f/Artificial%20Self-Assembly.pdf?dl=0
 
-As reviewed in~\cite{crosato2014self}, the notion of \emph{Programmable Self-Assembly} seems for students of Artificial Life to be very close to the biological concept of morphogenesis : ``The greater example of Programmable Self-Assembly in nature is probably the cell organisation in multicellular organisms, which is encoded by the DNA.'' \textit{It brings into Doursat's concept of Morphogenetic engineering : only an analogy or common ontological fundations ?} A review of the field is done in~\cite{doursat2013review} : an essential distinction between self-organization and morphogenesis is \textbf{architecture}. An example of heterogeneous swarm of particles, yielding complex architectures is described in~\cite{doursat2008programmable}. The processes of local interactions (corresponding in biology to local physical forces) and positional information through gradient propagation are both integrated in the swarm model and allow to architecture complex patterns from the bottom-up. The combination of a chemical reaction layer with an hydrodynamics layer provides also an interesting model of morphogenesis in~\cite{cussat2012synthesis}.
+As reviewed in~\cite{crosato2014self}, the notion of \emph{Programmable Self-Assembly} seems for students of Artificial Life to be very close to the biological concept of morphogenesis : ``The greater example of Programmable Self-Assembly in nature is probably the cell organisation in multicellular organisms, which is encoded by the DNA.'' An important approach is Doursat's concept of Morphogenetic Engineering, that focuses on designing complex systems from the bottom-up. A review of the field is done in~\cite{doursat2013review} : an essential distinction between self-organization and morphogenesis that it introduces is the presence of an architecture. An example of heterogeneous swarm of particles, yielding complex architectures is described in~\cite{doursat2008programmable}. The processes of local interactions (corresponding in biology to local physical forces) and positional information through gradient propagation are both integrated in the swarm model and allow to architecture complex patterns from the bottom-up. The combination of a chemical reaction layer with an hydrodynamics layer provides also an interesting model of morphogenesis in~\cite{cussat2012synthesis}.
 
 
 
@@ -146,18 +148,16 @@ As reviewed in~\cite{crosato2014self}, the notion of \emph{Programmable Self-Ass
 %%%%%%%%%%%%%%%%%%%%%%%%
 \subsection*{Territorial Sciences}
 
-\textit{The concept is used in various disciplines dealing with territories and the built environment : geography, urban planning and design, urbanism, architecture. There not seem to be a unified view nor theory among these various fields, but even in each field itself.}
+The concept is used in various disciplines dealing with territories and the built environment : geography, urban planning and design, urbanism, architecture. There not seem to be a unified view nor theory among these various fields, but even in each field itself.
 
 %%%%%%%%%%%%%%%%%%%%%%%
 \paragraph{Built Environment}
 
-\textit{Architecture/Urbanism}
+Architecture and Urbanism are disciplines studying human settlements and the built environment at relatively small scales. Olsen's theory of Urban Metabolism \cite{olsen1982urban} links city morphogenesis with urban metabolism and urban ecology. The city is seen as a living organism with has different time scales of evolution (the life cycles). The study of Urban Morphology~\cite{moudon1997urban}, that focuses on morphogenetic processes, is presented as an emerging field in itself, across geography, architecture and urban planning : this view emphasis the crucial role of the form in these kind of processes.~\cite{burke1972dublin} studies the growth of a particular city on a given period of time, and attributes the evolution of urban morphology to \emph{morphogenetic agents}, i.e. people and developers. At an other scale, in architecture, a building can be seen as the results of micro-processes making sense and a particular architectural style interpreted through the use of generative shape grammars~\cite{ceccarini2001essai}. This methodology is not far from the work of C. Alexander, an illuminated architect that produced a theory of design process \cite{mehaffy2007notes}, inspired from computer science and biology and linked in some aspects to complexity. The notion of morphogenesis is in that case however quite loose, as referring to the processus of form generation in general.
 
-\cite{olsen1982urban} links city morphogenesis with urban metabolism and urban ecology. The city is seen as a living organism with has different time scales of evolution (the life cycles).
+\cite{dollens2014alan}
 
-\cite{moudon1997urban} geography, architecture and urban planning (most prefer the term of urban morphology $\rightarrow$ sets up the importance of the form compared to dynamics ?)
-
-\cite{mehaffy2007notes} Alexander is an illuminated Architect that produced a theory of design process, inspired from computer science and biology - linked in some aspects to complexity. \textit{seems to have some link to the genesis of architectural forms by pattern combination ; self-organisation ; path-dependency - but difficult to understand exactly what they are talking about, really artistic.}
+\cite{whitehand1999urban}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%
@@ -165,10 +165,11 @@ As reviewed in~\cite{crosato2014self}, the notion of \emph{Programmable Self-Ass
 
 The Urban growth modeling literature often refer to the growth process as morphogenesis, when the scale implied allows to exhibit patterns. An example of the emergence of qualitatively different urban functions, based on Alonso-Muth model is proposed in~\cite{bonin2012modele}. \cite{makse1998modeling} studies a model of urban growth involving the local urban form. In that case the local spatial correlations induce urban structure when the cities gains new inhabitants. More heterogeneous models imply a coupling between city components and transportation networks. \cite{achibet2014model} describe a model of co-evolution between road network and urban blocks structure. At a larger scale and involving more abstract functions, \cite{raimbault2014hybrid} couples city growth with network growth, including local feedback of the form through a density constraint and global feedback of position through network centrality and accessibility to amenities. These two mechanisms are analog to the local interaction and global information diffusion flow in biology.
 
+
 %%%%%%%%%%%%%%%%%%%%%%%
 \paragraph{Archeology}
 
-\cite{renfrew1978trajectory} : the morphogenesis of human settlements viewed from Thom's theory point of view. Sudden changes (qualitative changes) have occurred at any time and can be viewed as bifurcations during the morphogenesis process. [\textit{Note : link with the notion of transition (transmondyn) that must then be more than an evolution of meta-parameters of the dynamics (non-stationarity), but where bifurcations can occur - clarify parameter evolution in Thom's theory}]
+The morphogenesis of past human settlements viewed from Thom's Catastrophe Theory point of view, is introduced by~\cite{renfrew1978trajectory}. Sudden changes (qualitative changes, or regime shifts) have occurred at any time and can be viewed as bifurcations during the morphogenesis process. [\textit{Note : link with the notion of transition (transmondyn) that must then be more than an evolution of meta-parameters of the dynamics (non-stationarity), but where bifurcations can occur - clarify parameter evolution in Thom's theory}]
 
 
 
@@ -182,14 +183,14 @@ In social psychology we have remarkable examples like the morphogenetic approach
 
 Nonetheless, more than a systematic consensus in it’s usage, there is a common perception of it’s explanatory power to grasp notions that show remarkable morphogenetic concordance.
 
-For example, it’s usage in the field of Psychoanalysis has been evoked as early as 1918 to understand the formation of psychical structures and their dynamics, the pervasive repetition of early development, and the self organization in the symptom. After an extensive review on the available bibliography contained in the database Psychoanalytic Electronic Publishing we can argue that it has been most widely used after the sixties in relation to the morphogenetic qualities of the structuration of the drive theory (for example the article Instinct Theory in the Light of Microbiology, Therese Benedek, M.D.), and moreover thanks to the ideas of René Thom on Structural Stability and Morphogenesis.
+For example, it’s usage in the field of Psychoanalysis has been evoked as early as 1918 to understand the formation of psychical structures and their dynamics, the pervasive repetition of early development, and the self organization in the symptom. After an extensive review on the available bibliography contained in the database Psychoanalytic Electronic Publishing we can argue that it has been most widely used after the sixties in relation to the morphogenetic qualities of the structuration of the drive theory (for example the article Instinct Theory in the Light of Microbiology, Therese Benedek, M.D. ~\cite{benedek1973instinct}), and moreover thanks to the ideas of René Thom on Structural Stability and Morphogenesis.
 
 
 
 
 % discussion with Mario : morphogenesis of ideas as qualitative emergence ?
 
-% not sure exactly psychology, but found paper using the notion of "social mrophogenesis" to explain the emergence of different cultures
+% not sure exactly psychology, but found paper using the notion of "social morphogenesis" to explain the emergence of different cultures
 \cite{straus1977societal}
 % socio-psychology
 
@@ -210,7 +211,7 @@ The study of morphogenesis started with embryology between just before 1930's. T
 The study of morphology has been tightly linked to statistical modeling. 
 %Turing was a member of The Ratio Club, as was Ashby. Ashby’s Cyberneticss is consistent with Whitehead’s theory and Turing’s model, and gives an explanation as to why new equilibria so commonly emerge, rather than having chaos. (Keynes’ more jaundiced view was that we only see structure and simply ignore the chaos, treating it as ‘random’. There may be an element of truth in both views. But Ashby’s is less challenging.
 
-% TODO : correspodnance with currents in history of science
+% Possible correspondance with currents in history of science ?
 
 
 %%%%%%%%%%%%%%%%%%%%%%%
@@ -218,27 +219,25 @@ The study of morphology has been tightly linked to statistical modeling.
 
 \paragraph{Epistemology}
 
-Morphogenesis is also used for the advent of new study ;  \cite{gilbert2003morphogenesis} studies the evolution of evolutionary developmental biology through the metaphor of morphogenesis. He sees scientific ideas as interacting agents from which emerge new phenotype through differentiation processes, what is designed as the morphogenesis of the field.
+Morphogenesis is also used for the advent of new study : for example~\cite{gilbert2003morphogenesis} studies the evolution of evolutionary developmental biology through the metaphor of morphogenesis. He sees scientific ideas as interacting agents from which emerge new phenotype through differentiation processes, what is designed as the morphogenesis of the field.
 
 
 \paragraph{A mathematical approach}
 
-Ren{\'e} Thom~\cite{thom1974stabilite} : \textit{Structural stability and Morphogenesis.} \textit{Recalls many important notions, e.g. quantitative/qualitative.} Thom has developed a theory of system dynamics, the ``catastrophe theory'', that studies in deep the impact of topological structure of phase space manifolds on a system dynamics. Let $M$ a differentiable manifold, in which system state $(m,\dot{m})$ is embedded. We assume the existence of a closed set $K$, called \emph{Catastrophe set}. The topological type of $K$ is indeed endogeneously determined by system dynamics (in simple cases, it refers to the "classical" type of attractors/fixed points usually known : points, limit cycles). When $m$ encounters $K$ [\textit{need more precision here, how can a dynamic cross a catastrophe - does not work for attractors or limit cycles}], the system follows a \emph{qualitative} change in its form, what constitutes the basis of \textbf{morphogenesis}. This abstract theory of morphogenesis is independent of the nature of the system studied, its main contribution being to classify local catastrophes that occur during morphogenesis. Differentiation and richness of patterns have thus a geometrical explanation through the topological types of catastrophes. Thom notes that at this time, the study of form has mainly be the focus of biology, but that many applications could be done in physics and geomorphology for example (formulating the hypothesis that it is because it implies discontinuities and self-organisation, to which mathematicians were repulsive - \textit{interesting, links to the rise of complexity approach, now complexity paradigms are spreading in various disciplines, and the study of morphogenesis seem to have followed.}).
+Ren{\'e} Thom, in \emph{Structural stability and Morphogenesis}~\cite{thom1974stabilite} has developed a theory of system dynamics, the ``catastrophe theory'', that studies in deep the impact of topological structure of phase space manifolds on a system dynamics. Let $M$ a differentiable manifold, in which system state $(m,\dot{m})$ is embedded. We assume the existence of a closed set $K$, called \emph{Catastrophe set}. The topological type of $K$ is indeed endogenously determined by system dynamics (in simple cases, it refers to the "classical" type of attractors/fixed points usually known : points, limit cycles). When $m$ encounters $K$, the system follows a \emph{qualitative} change in its form, what constitutes the basis of \emph{morphogenesis}. This abstract theory of morphogenesis is independent of the nature of the system studied, its main contribution being to classify local catastrophes that occur during morphogenesis. Differentiation and richness of patterns have thus a geometrical explanation through the topological types of catastrophes. Thom notes that at this time, the study of form has mainly be the focus of biology, but that many applications could be done in physics and geomorphology for example. He formulated the hypothesis that it is because it implies discontinuities and self-organisation, to which mathematicians were repulsive, that it was not applied easily to various fields. We can link this to the rise of complexity approaches, with complexity paradigms that slowly spreaded in various disciplines, and the study of morphogenesis seem to have followed.
 
 
 \paragraph{Autopoiesis and Morphogenesis}
 
-The notion of \emph{autopoiesis} expresses the ability for a system to reproduce itself. A basic characterization is a semi-permeable boundary produced within the system and the ability to reproduce its components. A more general definition is proposed by Bourgine and Stewart in~\cite{bourgine2004autopoiesis} : \textit{``An autopoietic system is a network of processes that produces the components that reproduce the network, and that also regulates the boundary conditions necessary for its ongoing existence as a network''}. The notion of dynamical processes is key, and could be linked to Thom's theory of morphogenesis. They furthermore introduce a definition of cognition (trigger actions as function of sensitory inputs to ensure viability), and of living organism as autopoietic and cognitive. \textit{In that frame, for example, the arbotron is cognitive but not autopoietic ?}
+The notion of \emph{autopoiesis} expresses the ability for a system to reproduce itself. A basic characterization is a semi-permeable boundary produced within the system and the ability to reproduce its components. A more general definition is proposed by Bourgine and Stewart in~\cite{bourgine2004autopoiesis} : \textit{``An autopoietic system is a network of processes that produces the components that reproduce the network, and that also regulates the boundary conditions necessary for its ongoing existence as a network''}. The notion of dynamical processes is key, and could be linked to Thom's theory of morphogenesis. They furthermore introduce a definition of cognition (trigger actions as function of sensory inputs to ensure viability), and of living organism as autopoietic and cognitive, both notions being distinct~\cite{bitbol2004autopoiesis}. In that frame, for example, the arbotron~\cite{jun2005formation} is cognitive but not autopoietic. An example of link between autopoiesis and morphogenesis is shown in~\cite{niizato2010model}, where a type of Physarum organism has to play both on cell mobility and form evolution to be able to collect the food necessary for its survival. At this stage, we can postulate a strict inclusion from autopoietic systems, morphogenetic systems to self-organizing systems.
 
-autopoietic systems $\subset$ Morphogenetic systems $\subset$ Self-organization
-
-$\rightarrow$ give diagram and examples ? (arbotron ; ant colony ; organisms ; cities ; etc. )
 
 \paragraph{Co-evolution}
 
-\textit{reflexion : if morphogenesis can be transposed to ecosystem or societies, the components of the system are co-evolving $\rightarrow$ co-evolving components (more than strongly correlated) can be a necessary condition for exhibiting morphogenesis ?}
+Since morphogenesis can be transposed to ecosystem or societies, and the components of the system are co-evolving in those cases, the existence of co-evolution may be linked with morphogenesis, as an other way of seeing the system. Symbiosis in biology can lead to very strong causalities in organism evolution (co-evolution) : this phenomenon has been designed as \emph{symbiogenesis}. The symbiosis induce an change in morphogenetic patterns of symbiotic organisms as exemplified for different species in~\cite{chapman1998morphogenesis}. Thus the strong link between morphogenesis and co-evolution (here morphogenesis designing more evolutionary paths of morphogenetic patterns, i.e. at a different time scale).
 
-Symbiosis in biology can lead to very strong causalities in organism evolution (co-evolution) : this phenomenon has been designed as \emph{symbiogenesis}. The symbiosis induce an change in morphogenetic patterns of symbiotic organisms as exemplified for different species in~\cite{chapman1998morphogenesis}. Thus the strong link between morphogenesis and co-evolution (here morphogenesis designing more evolutionary paths of morphogenetic patterns ?).
+
+
 
 
 
@@ -290,28 +289,42 @@ Most system studied seem to have the particularity to exhibit an architecture, w
 \subsection*{Proposition of a Meta-epistemological Framework}
 
 
-We propose the following hierarchical organisation of concepts :
+\paragraph{Framework}
 
-Self-organization $\supsetneq$ Morphogenesis $\supsetneq$ Autopoiesis $\supsetneq$ Life
+We propose a hierarchical organisation of concepts, that can be seen as a meta-epistemological framework, since definitions are built from synthesis of the many disciplines evoked here, and that their application in each particular discipline yields an epistemological frame. The concepts are organized the following way :
 
-each having a precise definition, elaborated from the synthesis of disciplines.
+\begin{equation}
+\textrm{Self-organization} \supsetneq \textrm{Morphogenesis} \supsetneq \textrm{Autopoiesis} \supsetneq \textrm{Life}
+\end{equation}
 
-\textit{clarify definitions}
 
-The boundary between self-organization and morphogenesis is the link between form and function, which can be defined as \emph{architecture}~\cite{doursat2013review}.
+each having a generic definition, elaborated from the synthesis of disciplines.
 
-The complexity of systems increase with notion depth, what can be embodied in the fact that :
+\medskip
+
+\textbf{Definition : \textit{Self-organization}.} A system is self-organized if it exhibits weak emergence~\cite{bedau2002downward}.
+
+\medskip
+
+\textbf{Definition : \textit{Morphogenesis}.} A self-organized system is the result of morphogenetic processes if it exhibits an emergent architecture, in the sens of causal relations between form and function at different levels.
+
+\medskip
+
+\textbf{Definition : \textit{Autopoiesis and Life}.} 
+
+
+\medskip
+
+The boundary between self-organization and morphogenesis is the existence of causal links between form and function, which can be defined as \emph{architecture}~\cite{doursat2013review}, generally emergent from the bottom-up. We observe that the complexity of systems increase with notion depth, what can be loosely translated in the fact that :
 \begin{itemize}
-\item Emergence strength~\cite{bedau2002downward} diminishes with depth, i.e. the number of autonomous scales increases.
+\item Emergence strength~\cite{bedau2002downward} diminishes with depth, in the sense that the number of autonomous scales increases.
 \item Number of bifurcations increases~\cite{thom1974stabilite}, i.e. path-dependancy increases.
 \end{itemize}
 
 
 \paragraph{Application}
 
-An ontological specification~\cite{livet2010ontology} yields an application to a particular field, each one developing its own properties and level of inclusion between concepts. 
-
-\textit{need to clarify correspondence/equivalence of projected concepts}
+An ontological specification~\cite{livet2010ontology}, i.e. the definition of entities to which the notion apply, yields an application to a particular field, each one developing its own properties and level of inclusion between concepts. There is a priori no reason for a direct correspondence or equivalence of projected concepts, thus transfer of knowledge between fields may be subject to caution.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%
@@ -327,8 +340,8 @@ An ontological specification~\cite{livet2010ontology} yields an application to a
 Our work relies for now on a broad but not \emph{systematic} review, in the sense
 
 
-\item Algorithmic Literature Review and Text-mining : quantitative epistemology
-\end{itemize}
+%\item Algorithmic Literature Review and Text-mining : quantitative epistemology
+%\end{itemize}
 
 
 
@@ -351,7 +364,9 @@ Our work relies for now on a broad but not \emph{systematic} review, in the sens
 %%%%%%%%%%%%
 % biblio
 
-%\bibliographystyle{apalike}
+\newpage
+
+\bibliographystyle{apalike}
 \bibliography{biblio}
 
 
@@ -372,9 +387,9 @@ Our work relies for now on a broad but not \emph{systematic} review, in the sens
 
 % Q that we will have to answer : overlaps with over concepts.
 
-% TODO find synonyms
+% - find synonyms ?
 
-% TODO : also list all fields using it.
+% - list all fields using it ?
 
 %%%%%%%%%%%%%%
 % Tasks :
